--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run build",
-    "build-lib": "rm -rf lib/*; babel src --out-dir lib",
-    "build-demo": "rm demo/demo.js; webpack demo/demo.jsx demo/demo.js",
+    "build-lib": "babel src --out-dir lib",
+    "build-demo": "webpack demo/demo.jsx demo/demo.js",
     "build": "npm run build-lib && npm run build-demo"
   },
   "peerDependencies": {
